fix: fix some spacings

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -94,6 +94,7 @@ ul {
       font-size: 20px;
       line-height: 16px;
       margin-bottom: 16px;
+      margin-top: 8px;
       width: 100%;
     }
   }
@@ -151,6 +152,7 @@ ul {
     border-radius: 20px;
     white-space: nowrap;
     cursor: pointer;
+    line-height: 22px;
   }
 
   &.active {
@@ -209,7 +211,7 @@ ul {
 
   &.active {
     .accordion-trigger {
-      padding-top: 20px;
+      padding-top: 28px;
       background-color: transparent;
       color: var(--light);
     }
